Overflow issue solved

--- a/todo-b/src/css/todos.css
+++ b/todo-b/src/css/todos.css
@@ -5,4 +5,5 @@
     padding: 0.5rem;
     border-radius: 0.6rem;
     height: 60vh;
+    overflow: auto;
 }
